fixed spacing outside html tags!

--- a/css/general.scss
+++ b/css/general.scss
@@ -1,15 +1,14 @@
-body {
+body, html {
     background-color: #23272A;
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
     width: 100%;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
-html {
-    scroll-behavior: smooth;
-  }
+
 
 hr {
     margin: 0;
